--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,6 @@ description: > # this means to ignore newlines until "baseurl:"
 github_username:  lightningholt # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
-# theme: minima
+theme: minima
 
-theme: jekyll-theme-midnight
+# theme: jekyll-theme-midnight
