--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Problem Love 
 author: lightningholt
 email: calebjamesholt@gmail.com
-description: # this means to ignore newlines until "baseurl:"
+description: #< # this means to ignore newlines until "baseurl:"
   I'm a big fan of tough problems that make you think. This website houses my most cherished projects solving tough problems from 
     - my PhD work 
     - a ML project on Jackson Pollock (in progress)
@@ -13,6 +13,7 @@ description: # this means to ignore newlines until "baseurl:"
 github_username:  lightningholt # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
-theme: minima
+# theme: minima
+theme: dinky
 
 # theme: jekyll-theme-midnight
