--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,6 @@ github_username:  lightningholt # DO NOT include the @ character, or else the bu
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 # theme: minima
-theme: dinky
+theme: jekyll-theme-dinky
 
 # theme: jekyll-theme-midnight
